adding html file

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <h1>Me, Myself & I</h1>
       </header>
       <!-- Add image on homepage -->
-
+      <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
       <!-- Add images on About us -->
       <div class="Aboutme"><h1>About Me</h1></div>
       <img src="images/about.png" alt="about me" style="width:50%;height:50%;">
-      <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
       <p>My name is Mweru Muchai. </p>
       <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
       <div class="Portfolio">Portfolio</div>
@@ -40,7 +39,7 @@
       <a href="https://www.facebook.com"><img src ="images/fb.JPG"></a>
       <a href="https://www.twitter.com"><img src ="images/twitter.png"></a>
 
-      <footer>Copyright &copy;mwerumuchai</footer>
+      <footer>Copyright &copy;mwerumuchai 2017</footer>
     </div>
   </body>
 </html>
