--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="radio">
       <img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
       <div class="header"></div>
       <header>
