--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="container">
       <div class="radio">
+        <label><input type="radio" name="optradio">About Me</label>
+      </div>
+      
       <img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
       <div class="header"></div>
       <header>
