--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="radio">
         <label><input type="radio" name="optradio">About Me</label>
       </div>
-      
+      <div class="radio">
+        <label><input type="radio" name="optradio">Portfolio</label>
+      </div>
       <img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
       <div class="header"></div>
       <header>
