--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <link href ="css/ip.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="#" rel="stylesheet" type="text/css">
     <title=""> </title>
   </head>
   <body>
