--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <title=""> </title>
+    <title="">Me, Myself & I</title>
   </head>
   <body>
     <div class="container">
@@ -20,10 +20,6 @@
         <label><input type="radio" name="optradio">Contacts</label>
       </div>
       <img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
-      <div class="header"></div>
-      <header>
-        <h1>Me, Myself & I</h1>
-      </header>
       <!-- Add image on homepage -->
       <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
       <!-- Add images on About us -->
