--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title="">Me, Myself & I</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container"><img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
       <div class="radio">
         <label><input type="radio" name="optradio">About Me</label>
       </div>
@@ -19,7 +19,6 @@
       <div class="radio">
         <label><input type="radio" name="optradio">Contacts</label>
       </div>
-      <img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
       <!-- Add image on homepage -->
       <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
       <!-- Add images on About us -->
