adding modified files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title="">Me, Myself & I</title>
   </head>
   <body>
-    <div class="container"><img src="images/main.png" alt="the sea" style="width:100%;height:100%;">
+    <div class="container"><img src="images/main.png" alt="the sea">
       <div class="radio">
         <label><input type="radio" name="optradio">About Me</label>
       </div>
