--- a/index.html
+++ b/index.html
@@ -19,29 +19,32 @@
       <div class="radio">
         <label><input type="radio" name="optradio">Contacts</label>
       </div>
-      <!-- Add image on homepage -->
-      <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
-      <!-- Add images on About us -->
-      <div class="Aboutme"><h1>About Me</h1></div>
-      <img src="images/about.png" alt="about me" style="width:50%;height:50%;">
-      <p>My name is Mweru Muchai. </p>
-      <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
-      <div class="Portfolio">Portfolio</div>
-      <img src="images/portfolio.jpg" alt="portfolio" style="width:50%;height:50%;">
-      <h1><u>Work Experience</u></h1>
-      <strong>Realtime Techology Ltd</strong>
-      <ol>Job Title:Database Developer</ol>
-      <ol>Duration: February 2014-Current</ol>
-      <h1><u>Academic Profile</u></h1>
-      <ol>Kenya College of Accountancy University</ol>
-      <ol>Bachelor of Science degree in Information Technology</ol>
-      <ol>January 2011 - August 2012</ol>
-    <div class="Contact"><u><h1>Contact</h1></u></div>
-    <img src="images/contact.jpg" alt="contact" style="width:50%;height:50%;">
-    <ol>Name:  Mweru Muchai</ol>
-    <ol>Email: mwerumuchai@gmail.com </ol>
 
-<!-- Add social media icons -->
+      <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
+      <div class="Aboutme"><h1>About Me</h1>
+        <img src="images/about.png" alt="about me" style="width:50%;height:50%;">
+        <p>My name is Mweru Muchai. </p>
+        <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
+      </div>
+
+      <div class="Portfolio"><h1>Portfolio</h1>
+        <img src="images/portfolio.jpg" alt="portfolio" style="width:50%;height:50%;">
+          <h1><u>Work Experience</u></h1>
+          <strong>Realtime Techology Ltd</strong>
+          <ol>Job Title:Database Developer</ol>
+          <ol>Duration: February 2014-Current</ol>
+          <h1><u>Academic Profile</u></h1>
+          <ol>Kenya College of Accountancy University</ol>
+          <ol>Bachelor of Science degree in Information Technology</ol>
+          <ol>January 2011 - August 2012</ol>
+      </div>
+
+    <div class="Contact"><u><h1>Contact</h1></u>
+      <img src="images/contact.jpg" alt="contact" style="width:50%;height:50%;">
+        <ol>Name:  Mweru Muchai</ol>
+        <ol>Email: mwerumuchai@gmail.com </ol>
+    </div>
+
       <a href="https://www.facebook.com"><img src ="images/fb.JPG"></a>
       <a href="https://www.twitter.com"><img src ="images/twitter.png"></a>
 
