--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title="">Me, Myself & I</title>
   </head>
   <body>
-    <div class="container"><img src="images/main.png" alt="the sea">
+    <div class="container-fluid"><img src="images/main.png" alt="the sea">
       <div class="radio">
         <label><input type="radio" name="optradio">About Me</label>
       </div>
@@ -23,8 +23,8 @@
       <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
       <div class="Aboutme"><h1>About Me</h1>
         <img src="images/about.png" alt="about me" style="width:50%;height:50%;">
-        <p>My name is Mweru Muchai. </p>
-        <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
+          <p>My name is Mweru Muchai. </p>
+          <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
       </div>
 
       <div class="Portfolio"><h1>Portfolio</h1>
