--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <title="">Me, Myself & I</title>
+    <title=""><i><align="center"> Me, Myself & I</align></i></title>
   </head>
   <body>
     <div class="container-fluid"><img src="images/main.png" alt="the sea">
@@ -22,13 +22,13 @@
 
       <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
       <div class="Aboutme"><h1>About Me</h1>
-        <img src="images/about.png" alt="about me" style="width:50%;height:50%;">
+        <img src="images/about.png" alt="about me" style="width:30%;height:30%;">
           <p>My name is Mweru Muchai. </p>
           <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
       </div>
 
       <div class="Portfolio"><h1>Portfolio</h1>
-        <img src="images/portfolio.jpg" alt="portfolio" style="width:50%;height:50%;">
+        <img src="images/portfolio.jpg" alt="portfolio" style="width:30%;height:30%;">
           <h1><u>Work Experience</u></h1>
           <strong>Realtime Techology Ltd</strong>
           <ol>Job Title:Database Developer</ol>
@@ -40,7 +40,7 @@
       </div>
 
     <div class="Contact"><u><h1>Contact</h1></u>
-      <img src="images/contact.jpg" alt="contact" style="width:50%;height:50%;">
+      <img src="images/contact.jpg" alt="contact" style="width:30%;height:30%;">
         <ol>Name:  Mweru Muchai</ol>
         <ol>Email: mwerumuchai@gmail.com </ol>
     </div>
