--- a/index.html
+++ b/index.html
@@ -6,30 +6,38 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <title=""><i><align="center"> Me, Myself & I</align></i></title>
+    <title=""></title>
   </head>
+  <div class="jumbotron text-center">
+  <h1><i>Me, Myself & I</i></h1>
+  </div>
   <body>
-    <div class="container-fluid"><img src="images/main.png" alt="the sea">
-      <div class="radio">
-        <label><input type="radio" name="optradio">About Me</label>
+    <div class="container-fluid">
+      <p>Click on the Menu</p>
+      <div class="panel-group">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+             <a data-toggle="collapse" href="#collapse1">Collapsible panel</a>
+            </h4>
       </div>
-      <div class="radio">
-        <label><input type="radio" name="optradio">Portfolio</label>
+      <div id="collapse1" class="panel-collapse collapse">
+        <div class="panel-body">About Me</div>
+        <div class="panel-footer">Portfolio</div>
+        <div class="panel-footer">Contacts</div>
       </div>
-      <div class="radio">
-        <label><input type="radio" name="optradio">Contacts</label>
-      </div>
-
-      <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
-      <div class="Aboutme"><h1>About Me</h1>
-        <img src="images/about.png" alt="about me" style="width:30%;height:30%;">
-          <p>My name is Mweru Muchai. </p>
+    </div>
+  </div>
+  <p>“Never forget what you are, the rest of the world will not. Wear it like armor and it can never be used to hurt you.” ~Tyrion Lannister</p>
+    <div class="Aboutme"><h1>About Me</h1>
+      <img src="images/about.png" alt="about me" style="width:10%;height:10%;">
+        <p>My name is Mweru Muchai. </p>
           <p>When I am not working, I am either playing tennis with my friends or binge watching my favorite series.<span> </p>
-      </div>
+    </div>
 
-      <div class="Portfolio"><h1>Portfolio</h1>
-        <img src="images/portfolio.jpg" alt="portfolio" style="width:30%;height:30%;">
-          <h1><u>Work Experience</u></h1>
+    <div class="Portfolio"><h1>Portfolio</h1>
+      <img src="images/portfolio.jpg" alt="portfolio" style="width:10%;height:10%;">
+        <h1><u>Work Experience</u></h1>
           <strong>Realtime Techology Ltd</strong>
           <ol>Job Title:Database Developer</ol>
           <ol>Duration: February 2014-Current</ol>
@@ -37,10 +45,10 @@
           <ol>Kenya College of Accountancy University</ol>
           <ol>Bachelor of Science degree in Information Technology</ol>
           <ol>January 2011 - August 2012</ol>
-      </div>
+    </div>
 
     <div class="Contact"><u><h1>Contact</h1></u>
-      <img src="images/contact.jpg" alt="contact" style="width:30%;height:30%;">
+      <img src="images/contact.jpg" alt="contact" style="width:10%;height:10%;">
         <ol>Name:  Mweru Muchai</ol>
         <ol>Email: mwerumuchai@gmail.com </ol>
     </div>
