social media icons

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
   <div class="col-sm-4">
     <ol>Name: Mweru Muchai</ol>
     <ol>Email: mwerumuchai@gmail.com</ol>
-    <img src="images/contact.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    <img src="images/contact.jpg" class="img-responsive margin" style="width:15%" alt="Image">
   </div>
   <div class="col-sm-4">
     <p>Facebook</p>
-    <img src="images/fb.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    <img src="images/fb.png" class="img-responsive margin" style="width:15%" alt="Image">
   </div>
   <div class="col-sm-4">
     <p>twitter</p>
-    <img src="images/twitter.png" class="img-responsive margin" style="width:100%" alt="Image">
+    <img src="images/twitter.png" class="img-responsive margin" style="width:15%" alt="Image">
   </div>
 </div>
 </div>
