--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="container-fluid bg-1 text-center">
 <h3 class="margin">About Me</h3>
 <img src="images/about.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-<p>My name is Mweru Muchai. I enjoy researching on random stuff on the internet. When I am not working, I'm either binge watching one of my favorite series i.e Games Of Thrones</p>
+<p>My name is Mweru Muchai. I enjoy researching on random stuff on the internet. When I am not <span style="color:blue;font-weight:bold">working</span>, I'm either binge watching one of my favorite series i.e <span style="color:darkolivegreen;font-weight:bold">Games Of Thrones</span> </p>
 </div>
 
 <div class="container-fluid bg-2 text-center">
