edit the html file again

--- a/index.html
+++ b/index.html
@@ -71,16 +71,29 @@
 
 <div class="container-fluid bg-1 text-center">
 <h3 class="margin">About Me</h3>
-<img src="images/about.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-<p>My name is Mweru Muchai. I enjoy researching on random stuff on the internet. When I am not <span style="color:blue;font-weight:bold">working</span>, I'm either binge watching one of my favorite series i.e <span style="color:darkolivegreen;font-weight:bold">Games Of Thrones</span> </p>
+<img src="images/aboutme.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+<p>My name is Mweru Muchai. I enjoy researching random stuff on the internet. When I am not <span style="color:blue;font-weight:bold">working</span>, I'm either binge watching one of my favorite series i.e <span style="color:darkolivegreen;font-weight:bold">Games Of Thrones</span> </p>
 </div>
 
 <div class="container-fluid bg-2 text-center">
 <h3 class="margin">Portfolio</h3>
-<p> </p>
-<a href="#" class="btn btn-default btn-lg">
+<p>Work Experience</p>
+
+<ul>
+  <li>Realtime Technology Ltd</li>
+  <li>Database Developer</li>
+  <li>February 2014 - current</li>
+</ul>
+<a href="http://www.realtimetechnology.co.ke/" class="btn btn-default btn-lg">
   <span class="glyphicon glyphicon-search"></span> Search
 </a>
+<p>Educational Background</p>
+
+<ul>
+  <li>Kenya College of Accountancy University</li>
+  <li>Bachelor of Science degree in information technology</li>
+  <li>January 2011-August 2012</li>
+</ul>
 </div>
 
 <div class="container-fluid bg-3 text-center">
@@ -89,7 +102,7 @@
   <div class="col-sm-4">
     <ol>Name: Mweru Muchai</ol>
     <ol>Email: mwerumuchai@gmail.com</ol>
-    <img src="images/contact.jpg" class="img-responsive margin" style="width:15%" alt="Image">
+    <img src="images/contact.jpg" class="img-responsive margin" style="width:15%" alt="Image" align="center">
   </div>
   <div class="col-sm-4">
     <p>Facebook</p>
