--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </div>
 
 <div class="container-fluid bg-2 text-center">
-<h3 class="margin">Portfolio</h3>
+<h3 class="margin-left">Portfolio</h3>
 <p>Work Experience</p>
 
 <ul>
@@ -84,9 +84,7 @@
   <li>Database Developer</li>
   <li>February 2014 - current</li>
 </ul>
-<a href="http://www.realtimetechnology.co.ke/" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-search"></span> Search
-</a>
+
 <p>Educational Background</p>
 
 <ul>
