--- a/index.html
+++ b/index.html
@@ -1,120 +1,65 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <link href ="css/ip.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <style>
-  body {
-      font: 20px Montserrat, sans-serif;
-      line-height: 1.8;
-      color: black;
-  }
-  p {font-size: 16px;}
-  .margin {margin-bottom: 45px;}
-  .bg-1 {
-      background-color: #1abc9c; /* Green */
-      color: #ffffff;
-  }
-  .bg-2 {
-      background-color: #474e5d; /* Dark Blue */
-      color: #ffffff;
-  }
-  .bg-3 {
-      background-color: #ffffff; /* White */
-      color: #555555;
-  }
-  .bg-4 {
-      background-color: #2f2f2f; /* Black Gray */
-      color: #fff;
-  }
-  .container-fluid {
-      padding-top: 70px;
-      padding-bottom: 70px;
-  }
-  .navbar {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border: 0;
-      border-radius: 0;
-      margin-bottom: 0;
-      font-size: 12px;
-      letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
-      color: #1abc9c !important;
-  }
-  </style>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>Mweru Muchai - Me Myself and I</title>
+	<meta name="description" content="" />
+	<link rel="stylesheet" href="fonts/stylesheet.css">
+	<link rel="stylesheet" href="css/legion.css">
+	<link rel='stylesheet' href='css/style.css'/>
 </head>
 <body>
-
-<nav class="navbar navbar-default">
-<div class="container">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Me,Myself & I</a>
-  </div>
-  <div class="collapse navbar-collapse" id="myNavbar">
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contacts</a></li>
-    </ul>
-  </div>
-</div>
-</nav>
-
-<div class="container-fluid bg-1 text-center">
-<img src="images/aboutme.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-<p>My name is Mweru Muchai. I enjoy researching random stuff on the internet. When I am not <span style="color:blue;font-weight:bold">working</span>, I'm either binge watching one of my favorite series i.e <span style="color:darkolivegreen;font-weight:bold">Games Of Thrones</span> </p>
-</div>
-
-<div class="container-fluid bg-2 text-center">
-<h1 class="margin-left">Portfolio</h1>
-<p>Work Experience</p>
-
-<ul>
-  <li>Realtime Technology Ltd</li>
-  <li>Database Developer</li>
-  <li>February 2014 - current</li>
-</ul>
-
-<p>Educational Background</p>
-
-<ul>
-  <li>Kenya College of Accountancy University</li>
-  <li>Bachelor of Science degree in information technology</li>
-  <li>January 2011-August 2012</li>
-</ul>
-</div>
-
-<div class="container-fluid bg-3 text-center">
-<h3 class="margin"><b>Contacts</h3><br>
-<div class="row">
-  <div class="col-sm-4">
-    <ol>Name: Mweru Muchai</ol>
-    <ol>Email: mwerumuchai@gmail.com</ol>
-    <img src="images/contact.jpg" class="img-responsive margin" style="width:15%" alt="Image" align="center">
-  </div>
-  <div class="col-sm-4">
-    <p>Facebook</p>
-    <img src="images/fb.png" class="img-responsive margin" style="width:15%" alt="Image">
-  </div>
-  <div class="col-sm-4">
-    <p>twitter</p>
-    <img src="images/twitter.png" class="img-responsive margin" style="width:15%" alt="Image">
-  </div>
-</div>
-</div>
-
-<footer class="container-fluid bg-4 text-center">
-<p>Copyright @2017<a href="#">Mweru Muchai</a></p>
-</footer>
-
+    <div class="menu">
+        <h1>Me Myself &amp; I</h1>
+        <nav>
+            <ul class="cf">
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="header-wrapper">
+        <p class="header-text" id="about">Hello world, My name is Mweru Muchai. I enjoy researching random stuff on the internet. When I am not working, I'm either binge watching one of my favorite series i.e <a href="http://www.hbo.com/game-of-thrones" target="_blank">Game Of Thrones</a>, or coding away to the sweet sounds of SZA</p>
+        <div class="social">
+            <a href="https://www.facebook.com/profile.php?id=1316250204" target="_blank"><img src="img/facebook.png"></a>
+            <a href="https://twitter.com/Lavenderlich" target="_blank"><img src="img/twitter.png"></a>
+            <a href="https://www.instagram.com/mweru_muchai/" target="_blank"><img src="img/instagram.png"></a>
+        </div>
+    </div>
+    <div class="row" id="portfolio">
+        <h1>Portfolio</h1>
+        <h2>Work Experience</h2>
+        <ul>
+            <li>
+                <h3>Realtime Technology Ltd - Database Developer</h3>
+                <em>February 2014 - Current</em>
+            </li>
+        </ul>
+        <h2>Educational Background</h2>
+        <ul>
+            <li>
+                <h3>KCA University - BSc. Information Technology</h3>
+                <em>January 2011 - August 2012</em>
+            </li>
+        </ul>
+    </div>
+    <div class="row cf" id="contacts">
+        <h1>Contacts</h1>
+        <div class="col-lg-7">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.835778245343!2d36.80676841422321!3d-1.2715854990725362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f172cdf13d2eb%3A0xe78bcceb379237ca!2sVilla+Rosa+Kempinski!5e0!3m2!1sen!2ske!4v1499862181053" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-lg-5">
+            <p><label>Name:&nbsp;</label>Mweru Muchai</p>
+            <p><label>Email Address:&nbsp;</label><a href="mailto:mwerumuchai@gmail.com">mwerumuchai@gmail.com</a></p>
+            <p><label>Phone Number:&nbsp;</label>0727272727</p>
+        </div>
+    </div>
+    <small>Mweru Muchai.&nbsp;&nbsp;Copyright @2017.</small>
 </body>
 </html>
