--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="" />
 	<link rel="stylesheet" href="fonts/stylesheet.css">
 	<link rel="stylesheet" href="css/legion.css">
-	<link rel='stylesheet' href='css/style.css'/>
+	<link rel='stylesheet' href='css/styles.css'/>
 </head>
 <body>
     <div class="menu">
