re-arranged files

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="col-lg-5">
             <p><label>Name:&nbsp;</label>Mweru Muchai</p>
             <p><label>Email Address:&nbsp;</label><a href="mailto:mwerumuchai@gmail.com">mwerumuchai@gmail.com</a></p>
-            <p><label>Phone Number:&nbsp;</label>0727272727</p>
+            <p><label>P.O Box:&nbsp;</label>1125, Ruiru.</p>
         </div>
     </div>
     <small>Mweru Muchai.&nbsp;&nbsp;Copyright @2017.</small>
