edit name on menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Esther Muchai - UX/UI Designer & Full Stack Developer</title>
+    <title>Esther Muchai - Full Stack Developer</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
