--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="intro-text">
               <h1>Hello, I'm <span class="name">Esther Muchai</span></h1>
-              <p>UX/UI Designer & Full Stack Developer</p>
+              <p>Full Stack Developer</p>
               <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
           </div>
         </div>
