add skills in the about section

--- a/index.html
+++ b/index.html
@@ -62,63 +62,42 @@
     <header id="header">
       <div class="intro">
         <div class="container">
-          <div class="row">
-            <div class="intro-text">
-              <h1>Hello, I'm <span class="name">Esther Muchai</span></h1>
-              <p>Web Developer/Designer</p>
-              <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
-          </div>
+          <!-- <div class="row"> -->
+          <div class="intro-text">
+            <h2 class="text-left" style="color:white;font-size:44px;">Hello, I'm <span class="name">Esther Muchai</span></h2>
+            <p>Web Developer/Designer</p>
+            <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
+          <!-- </div> -->
         </div>
       </div>
     </header>
 
     <!-- About Section -->
     <div id="about">
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-4">
-          <div class="section-title text-center center">
-            <h2>About Me</h2>
-            <hr>
-            <!-- <div class="col-md-8 col-md-offset-2"> -->
-            <div class="about-text">
-              <p>My career began as a network administrator but all that changed in 2014 when I got a job at a software firm. Throughout the years , my curiosity in software developement rose and I decided to fully indulge in this field by joining
-                <a href="https://moringaschool.com/">MORINGA SCHOOL</a> in September 2017. This is where I developed a passion for designing amazing user experience functionalities. Apart from that, I get chances to interact with various developers which
-                helps in individual growth.</p>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h2>About Me</h2> <br>
+            <p>My career began as a network administrator but all that changed in 2014 when I got a job at a software firm. Throughout the years , my curiosity in software developement rose and I decided to fully indulge in this field by joining
+              <a href="https://moringaschool.com/">MORINGA SCHOOL</a> in September 2017. This is where I developed a passion for designing amazing user experience functionalities. Apart from that, I get chances to interact with various developers which
+              helps in individual growth.</p>
           </div>
-          <div class="col-md-2"></div>
-          <!-- </div> -->
-
-        </div>
-        <div class="col-md-4">
-          <div class="section-title text-center center">
-            <h2>Skills</h2>
-            <hr>
+          <div class="col-md-9">
+            <h2>Skills</h2> <br>
+            <div class="social">
+              <ul>
+                <li><img src="img/html5.png" class="img-responsive" alt="Project Title">HTML5</li>
+                <li><img src="img/css3.png" class="img-responsive" alt="Project Title">CSS3</li>
+                <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title">Bootstrap</li>
+                <li><img src="img/javascript.png" class="img-responsive" alt="Project Title">Javascript</li>
+                <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title">Flask</li>
+                <li><img src="img/django.png" class="img-responsive" alt="Project Title">Django</li>
+            </div>
+            </ul>
           </div>
-          <div class="row">
-            <div class="col-md-3">
-              <h5>HTML</h5>
-              <p><img src="img/html5.png" class="img-responsive" alt="Project Title">HTML5</p>
-            </div>
-            <div class="col-md-3">
-              <h5>CSS</h5>
-              <p><img src="img/css3.png" class="img-responsive" alt="Project Title">CSS3
-                <img src="img/bootstrap.png" class="img-responsive" alt="Project Title">Bootstrap</p>
-            </div>
-            <div class="col-md-3">
-              <h5>JAVASCRIPT</h5>
-              <p><img src="img/javascript.png" class="img-responsive" alt="Project Title">Javascript
-                <img src="img/jquery.png" class="img-responsive" alt="Project Title">jQuery</p>
-            </div>
-            <div class="col-md-3">
-              <h5>DATABASE</h5>
-              <p><img src="img/postgresql .png" class="img-responsive" alt="Project Title">Postgresql</p>
-            </div>
-          </div>
-
         </div>
       </div>
+    </div>
     </div>
     <!-- Portfolio Section -->
     <div id="portfolio">
@@ -149,7 +128,7 @@
                   <div class="hover-text">
                     <h4>Traffic Tracker</h4>
                     <small>This is a simple Web application that allows users to track traffic on specified routes.</small> </div>
-                  <img src="img/projects/traft.jpg" class="img-responsive" alt="Traffic Tracker"> </a>
+                  <img src="img/projects/traft.jpeg" class="img-responsive" alt="Traffic Tracker"> </a>
                 </div><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a>
               </div>
             </div>
@@ -159,8 +138,8 @@
                   <a href="img/projects/unsplashclone.png" title="Technologies used: Python3.6, Django, Bootstrap, Postgresql Database, CSS, HTML" rel="prettyPhoto">
                     <div class="hover-text">
                       <h4>Unsplash-Clone</h4>
-                      <small>This is a cloned web application for unsplash where users can upload photos and download photos from other users.</small> </div>
-                    <img src="img/projects/unsplash.png" class="img-responsive" alt="Project Title"> </a>
+                      <small>This is a cloned web application for unsplash where users can upload and download photos from other users.</small> </div>
+                    <img src="img/projects/unsplash.png" class="img-responsive" alt="Unsplash-Clone"> </a>
                 </div><a href="https://unsplash-clone2.herokuapp.com/">View Site</a>
               </div>
             </div>
@@ -183,7 +162,7 @@
                     <div class="hover-text">
                       <h4>Autos</h4>
                       <small>This application helps users to view more details about cars and be able to rate them.</small> </div>
-                    <img src="img/projects/jeep.jpg" class="img-responsive" alt="Project Title"> </a>
+                    <img src="img/projects/jeep.jpeg" class="img-responsive" alt="Autos"> </a>
                 </div>
                 <a href="https://news-highlights.herokuapp.com/">View Site</a>
               </div>
@@ -195,29 +174,24 @@
     <!-- Contact Section -->
     <div id="contact" class="text-center">
       <div class="container">
-        <div class="section-title center">
+        <div class="row">
           <h2>Contact</h2>
-          <hr>
-        </div>
-        <div class="col-md-8">
-          <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
+          <div class="col-md-6">
+            <i class="fa fa-map-marker fa-2x"></i>
             <p>P.O Box 1125 - 00232 <br> Ruiru, Kenya</p>
             <p><i class="fa fa-envelope-o fa-2x"></i>Email: mwerumuchai@gmail.com</p>
           </div>
           <div class="col-md-6">
-            <p></p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <div class="col-md-8 col-md-offset-2">
-          <div class="social">
-            <ul>
-              <li><a href="https://github.com/mwerumuchai"><i class="fa fa-github"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/esther-mweru-913a4838/"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
+            <div class="social">
+              <ul>
+                <li><a href="https://github.com/mwerumuchai"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/esther-mweru-913a4838/"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
     <div id="footer">
       <div class="container text-center">
