add mailto functionality

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="col-md-6">
             <i class="fa fa-map-marker fa-2x"></i>
             <p>P.O Box 1125 - 00232 <br> Ruiru, Kenya</p>
-            <p><i class="fa fa-envelope-o fa-2x"></i>Email: mwerumuchai@gmail.com</p>
+            <p><i class="fa fa-envelope-o fa-2x"></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
           </div>
           <div class="col-md-6">
             <div class="social">
