--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -42,14 +43,16 @@
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
-            <a class="navbar-brand page-scroll" href="#page-top" style="color:white;font-size:24px;">Home</a> </div>
+            <!-- <a class="navbar-brand page-scroll" href="#page-top" style="color:white;font-size:24px;">HOME</a>  -->
+          </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse" id="text-left">
             <ul class="nav navbar-nav">
               <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
               <li class="hidden"> <a href="#page-top"></a> </li>
               <li> <a class="page-scroll" href="#about">About</a> </li>
+              <li> <a class="page-scroll" href="#skills">Skills</a> </li>
               <li> <a class="page-scroll" href="#portfolio">Projects</a> </li>
               <li> <a class="page-scroll" href="#contact">Contact</a> </li>
             </ul>
@@ -64,35 +67,54 @@
         <div class="container">
           <!-- <div class="row"> -->
           <div class="intro-text">
-            <h2 class="text-left" style="color:white;font-size:44px;">Hello, I'm <span class="name">Esther Muchai</span></h2>
+            <h2 class="text-left">Hello, I'm <span class="name">Esther Muchai</span></h2>
             <p>Web Developer/Designer</p>
-            <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
-          <!-- </div> -->
+            <!-- </div> -->
+          </div>
         </div>
-      </div>
     </header>
 
     <!-- About Section -->
     <div id="about">
       <div class="container">
+        <div class="section-title text-center center">
+          <h2>About Me</h2>
+          <hr>
+        </div>
+        <div class="row">
+          <div class="col-md-12 text-center"></div>
+          <div class="col-md-8 col-md-offset-2">
+            <div class="about-text">
+              <h4>I'm a Full Stuck Web Developer and UI/UX specialist. In the basic sense, I solve common and not so common , business problems using design and code.</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Skills Section -->
+    <div id="skills" class="text-center">
+      <div class="container-fluid">
+        <div class="section-title center">
+          <h2>Skills</h2>
+          <hr>
+        </div>
         <div class="row">
           <div class="col-md-4">
-            <h2>About Me</h2> <br>
-            <p>My career began as a network administrator but all that changed in 2014 when I got a job at a software firm. Throughout the years , my curiosity in software developement rose and I decided to fully indulge in this field by joining
-              <a href="https://moringaschool.com/">MORINGA SCHOOL</a> in September 2017. This is where I developed a passion for designing amazing user experience functionalities. Apart from that, I get chances to interact with various developers which
-              helps in individual growth.</p>
+            <h3><strong>Front-End Developer</strong></h3>
+            <h4>I have developed, maintained and launched various projects by using CSS3, Bootstrap, HTML5 and Javascript. Knowledge of open source JS libraries like jQuery </h4>
+            <h3><strong>Back-end Developer</strong></h3>
+            <h4>Incorporated Python frameworks in my projects such as Django and Flask</h4>
           </div>
-          <div class="col-md-8">
-            <h2>Skills</h2> <br>
-            <div class="social">
-              <ul>
-                <li><img src="img/html5.png" class="img-responsive" alt="Project Title">HTML5</li>
-                <li><img src="img/css3.png" class="img-responsive" alt="Project Title">CSS3</li>
-                <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title">Bootstrap</li>
-                <li><img src="img/javascript.png" class="img-responsive" alt="Project Title">Javascript</li>
-                <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title">Flask</li>
-                <li><img src="img/django.png" class="img-responsive" alt="Project Title">Django</li>
-            </div>
+          <div class="col-md-8"></div>
+          <div class="social">
+            <ul>
+              <li><img src="img/html5.png" class="img-responsive" alt="Project Title">HTML5</li>
+              <li><img src="img/css3.png" class="img-responsive" alt="Project Title">CSS3</li>
+              <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title">Bootstrap</li>
+              <li><img src="img/javascript.png" class="img-responsive" alt="Project Title">Javascript</li>
+              <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title">Flask</li>
+              <li><img src="img/django.png" class="img-responsive" alt="Project Title">Django</li>
             </ul>
           </div>
         </div>
@@ -128,7 +150,7 @@
                   <div class="hover-text">
                     <h4>Traffic Tracker</h4>
                     <small>This is a simple Web application that allows users to track traffic on specified routes.</small> </div>
-                  <img src="img/projects/traft.jpeg" class="img-responsive" alt="Traffic Tracker"> </a>
+                  <img src="img/projects/traft.png" class="img-responsive" alt="Traffic Tracker"> </a>
                 </div><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a>
               </div>
             </div>
@@ -139,7 +161,7 @@
                     <div class="hover-text">
                       <h4>Unsplash-Clone</h4>
                       <small>This is a cloned web application for unsplash where users can upload and download photos from other users.</small> </div>
-                    <img src="img/projects/unsplash.png" class="img-responsive" alt="Unsplash-Clone"> </a>
+                    <img src="img/projects/camera.png" class="img-responsive" alt="Unsplash-Clone"> </a>
                 </div><a href="https://unsplash-clone2.herokuapp.com/">View Site</a>
               </div>
             </div>
@@ -150,7 +172,7 @@
                     <div class="hover-text">
                       <h4>Github User Lookup</h4>
                       <small>A simple JavaScript application for searching users on Github using their usernames</small> </div>
-                    <img src="img/projects/userlookup.png" class="img-responsive" alt="Github User Lookup"> </a>
+                    <img src="img/projects/github.png" class="img-responsive" alt="Github User Lookup"> </a>
                 </div>
                 <a href="https://mwerumuchai.github.io/mc5-ip1/">View Site</a>
               </div>
@@ -162,7 +184,7 @@
                     <div class="hover-text">
                       <h4>Autos</h4>
                       <small>This application helps users to view more details about cars and be able to rate them.</small> </div>
-                    <img src="img/projects/jeep.jpeg" class="img-responsive" alt="Autos"> </a>
+                    <img src="img/projects/jeep.png" class="img-responsive" alt="Autos"> </a>
                 </div>
                 <a href="https://news-highlights.herokuapp.com/">View Site</a>
               </div>
@@ -173,12 +195,11 @@
     </div>
     <!-- Contact Section -->
     <div id="contact" class="text-center">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <h2>Contact</h2>
           <div class="col-md-6">
             <i class="fa fa-map-marker fa-2x"></i>
-            <p>P.O Box 1125 - 00232 <br> Ruiru, Kenya</p>
             <p><i class="fa fa-envelope-o fa-2x"></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
           </div>
           <div class="col-md-6">
